--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,4 @@ addopts = --maxfail=1 -rf -v -s
 norecursedirs = .git .cache .coverage .tox __pycache__ templates
 python_functions = test_*
 env =
-    ENV_NAME=test
+    ENV=test
